<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">monerujo</string>
    <string name="wallet_activity_name">Wallet</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_changepw">Change Passphrase</string>
    <string name="menu_back" tools:ignore="MissingTranslation">Back</string>
    <string name="menu_close" tools:ignore="MissingTranslation">Close</string>
    <string name="menu_cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="password_weak">Continue typing &#8230;</string>
    <string name="password_fair">Meh &#8230;</string>
    <string name="password_good">C\'mon, you can do better!</string>
    <string name="password_strong">Getting there &#8230;</string>
    <string name="password_very_strong">Yeah baby, h4x0r style!</string>
    <string name="label_login_wallets">Wallets</string>
    <string name="label_credits">Credits</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_close">Close</string>
    <string name="label_wallet_advanced_details">Detailed information</string>
    <string name="label_send_success">Successfully sent</string>
    <string name="label_send_done">Done</string>
    <string name="label_receive_info_gen_qr_code">Touch for QR Code</string>
    <string name="info_xmrto_enabled">You can convert XMR to other coins, tap to read more.</string>
    <string name="info_ledger_enabled">Ledger enabled, tap for more info.</string>
    <string name="info_xmrto"><![CDATA[
        <b>You entered a %1$s address.</b><br/>
        <i>You&apos;ll send XMR and this address will receive %1$s using an exchange service.</i>
    ]]></string>
    <string name="info_send_xmrto_success_order_label">Exchange Order</string>
    <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
    <string name="info_send_xmrto_paid">Confirmation Pending</string>
    <string name="info_send_xmrto_unpaid">Payment Pending</string>
    <string name="info_send_xmrto_error">Exchange Error (%1$s)</string>
    <string name="info_send_xmrto_sent">%1$s Sent!</string>
    <string name="info_send_xmrto_query">Querying &#8230;</string>
    <string name="info_send_xmrto_parms"><![CDATA[
        <b>You can send %1$s &#8212; %2$s %4$s</b>.<br/>
        <i><b>The exchange</b> is giving you an exchange rate of <b>%3$s %4$s/XMR</b> <u>right now</u></i>.
    ]]></string>
    <string name="send_available_btc">Balance: %2$s %3$s (%1$s XMR)</string>
    <string name="info_paymentid_integrated">&#x2714; Payment ID integrated</string>
    <string name="info_prepare_tx">Preparing your transaction</string>
    <string name="label_send_progress_xmrto_create">Creating exchange Order</string>
    <string name="label_send_progress_xmrto_query">Querying exchange Order</string>
    <string name="label_send_progress_create_tx">Preparing Monero Transaction</string>
    <string name="label_send_progress_queryparms">Querying exchange parameters</string>
    <string name="label_generic_xmrto_error">Exchange service ERROR</string>
    <string name="text_generic_xmrto_error">Code: %1$d</string>
    <string name="text_retry">Touch to retry</string>
    <string name="text_noretry_monero">Now we\'re stuck here!</string>
    <string name="text_noretry">Uh-oh, the exchange service does not seem be available right now!</string>
    <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
    <string name="text_send_btc_rate">(Rate: %1$s %2$s/XMR)</string>
    <string name="label_send_btc_xmrto_info">Visit the exchange website for support &amp; tracking</string>
    <string name="label_send_btc_xmrto_key_lb">Order number\nExchange</string>
    <string name="label_send_btc_xmrto_key">Exchange order number</string>
    <string name="label_send_btc_address">Destination %1$s Address</string>
    <string name="label_send_btc_amount">Amount</string>
    <string name="label_send_txid">Transaction ID</string>
    <string name="label_send_address">Destination Address</string>
    <string name="label_send_notes">Notes</string>
    <string name="backup_progress">Backup in progress</string>
    <string name="archive_progress">Archive in progress</string>
    <string name="rename_progress">Rename in progress</string>
    <string name="changepw_progress">Change Password in progress</string>
    <string name="service_progress">Wrapping things up &#8230;\nThis can take a while!</string>
    <string name="backup_success">Backup successful</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="rename_failed">Rename failed!</string>
    <string name="changepw_failed">Change Password failed!</string>
    <string name="changepw_success">Password changed</string>
    <string name="label_daemon">Network</string>
    <string name="connect_stagenet" translatable="false">Stagenet</string>
    <string name="connect_testnet" translatable="false">Testnet</string>
    <string name="status_wallet_loading">Loading Wallet &#8230;</string>
    <string name="status_wallet_unloaded">Wallet saved</string>
    <string name="status_wallet_unload_failed">Wallet save failed!</string>
    <string name="status_wallet_connecting">Connecting &#8230;</string>
    <string name="status_wallet_connect_failed">Node connection failed!\nCheck username/password</string>
    <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
    <string name="status_wallet_node_invalid">Node invalid!\nTry another.</string>
    <string name="status_wallet_connect_ioex">Cannot reach node!\nTry again or another.</string>
    <string name="status_wallet_disconnected">Disconnected</string>
    <string name="status_transaction_failed">Transaction failed: %1$s</string>
    <string name="send_xmrto_timeout">You waited too long my friend!</string>
    <string name="service_busy">I am still busy with your last wallet &#8230;</string>
    <string name="prompt_rename">Rename %1$s</string>
    <string name="prompt_changepw">New Passphrase for %1$s</string>
    <string name="prompt_changepwB">Repeat Passphrase for %1$s</string>
    <string name="prompt_password">Password for %1$s</string>
    <string name="prompt_fingerprint_auth">You can also open wallet using fingerprint.\nPlease touch sensor.</string>
    <string name="prompt_open_wallet">Opening the wallet&#8230;</string>
    <string name="bad_fingerprint">Fingerprint not recognized. Try again.</string>
    <string name="bad_password">Incorrect password!</string>
    <string name="bad_saved_password">Saved password is incorrect.\nPlease enter password manually.</string>
    <string name="bad_wallet">Wallet does not exist!</string>
    <string name="prompt_daemon_missing">Node must be set!</string>
    <string name="prompt_wrong_net">Wallet does not match selected net</string>
    <string name="label_watchonly">(Watch Only)</string>
    <string name="label_wallet_receive">Receive</string>
    <string name="label_wallet_send">Give</string>
    <string name="xmr_unconfirmed_amount">+ %1$s %2$s unconfirmed</string>
    <string name="service_description">Wallet is open</string>
    <string name="status_synced">Synced:</string>
    <string name="status_remaining">Blocks remaining</string>
    <string name="status_syncing">Syncing:</string>
    <string name="message_camera_not_permitted">No camera = No QR scanning!</string>
    <string name="label_copy_viewkey">View Key</string>
    <string name="label_copy_address">Public Address</string>
    <string name="label_copy_xmrtokey">Key</string>
    <string name="message_copy_viewkey">View Key copied to clipboard!</string>
    <string name="message_copy_xmrtokey">Key copied to clipboard!</string>
    <string name="message_copy_address">Wallet Address copied to clipboard!</string>
    <string name="message_copy_txid">Transaction ID copied to clipboard!</string>
    <string name="message_nocopy">Copy disabled for security reasons!</string>
    <string name="message_exchange_failed">Cannot get exchange rate!\nUse XMR/XMR or try again</string>
    <string name="generate_title">Create Wallet</string>
    <string name="generate_name_hint">Wallet Name</string>
    <string name="generate_password_hint">Wallet Passphrase</string>
    <string name="generate_fingerprint_hint">Allow to open wallet using fingerprint</string>
    <string name="generate_buttonGenerate">Make me a wallet already!</string>
    <string name="generate_address_hint">Public Address</string>
    <string name="generate_viewkey_hint">View Key</string>
    <string name="generate_spendkey_hint">Spend Key</string>
    <string name="generate_mnemonic_hint">25-Word Mnemonic Seed</string>
    <string name="generate_restoreheight_hint">Restore Height or Date (YYYY-MM-DD)</string>
    <string name="tx_timestamp">Timestamp</string>
    <string name="tx_id">TX ID</string>
    <string name="tx_key">TX Key</string>
    <string name="tx_destination">Destination</string>
    <string name="tx_paymentId">Payment ID</string>
    <string name="tx_blockheight">Block</string>
    <string name="tx_amount">Amount</string>
    <string name="tx_fee">Fee</string>
    <string name="tx_transfers">Transfers</string>
    <string name="tx_notes">Notes</string>
    <string name="tx_notes_hint">(optional)</string>
    <string name="menu_language">Language</string>
    <string name="menu_info">Show Secrets!</string>
    <string name="menu_streetmode">Street Mode</string>
    <string name="menu_ledger_seed">Convert Ledger Seed</string>
    <string name="prompt_ledger_seed">Ledger Seed Words</string>
    <string name="prompt_ledger_phrase">Ledger Passphrase (advanced)</string>
    <string name="prompt_ledger_seed_warn">Entering your Ledger Seed here is a major security risk!</string>
    <string name="subaddress_info_transition_name" translatable="false">subaddress_transition</string>
    <string name="subbaddress_name_hint">Subaddress Name</string>
    <string name="subaddress_tx_label">Transactions for this subaddress:</string>
    <string name="preferred_theme" translatable="false">preferred_theme</string>
    <string name="preferred_nightmode" translatable="false">preferred_nightmode</string>
    <string name="preferred_locale" translatable="false">preferred_locale</string>
    <string name="preferred_lock" translatable="false">preferred_lock</string>
    <string name="about_info" translatable="false">about_info</string>
    <string name="privacy_info" translatable="false">privacy_info</string>
    <string name="credits_info" translatable="false">credits_info</string>
    <string name="title_iface">Interface</string>
    <string name="title_info">Information</string>
    <string name="setting_daynight">Day / Night</string>
    <string name="setting_theme">Style</string>
    <string name="setting_lock">Lock Wallet in Background</string>
</resources>