<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/title_iface">
        <ListPreference
            app:defaultValue=""
            app:key="@string/preferred_locale"
            app:title="@string/menu_language"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="AUTO"
            app:entries="@array/daynight_themes"
            app:entryValues="@array/daynight_values"
            app:key="@string/preferred_nightmode"
            app:title="@string/setting_daynight"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="Classic"
            app:entries="@array/themes"
            app:entryValues="@array/themes_values"
            app:key="@string/preferred_theme"
            app:title="@string/setting_theme"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preferred_lock"
            android:title="@string/setting_lock" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/title_info">
        <Preference
            android:key="@string/credits_info"
            app:title="@string/label_credits" />
        <Preference
            android:key="@string/privacy_info"
            app:title="@string/menu_privacy" />
        <Preference
            android:key="@string/about_info"
            app:title="@string/menu_about" />
    </PreferenceCategory>
</PreferenceScreen>