<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        style="@style/MoneroLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/etSeed"
        android:text="@string/menu_ledger_seed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        style="@style/MoneroLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:labelFor="@+id/etSeed"
        android:text="@string/prompt_ledger_seed_warn"
        android:textColor="?attr/colorSecondary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSeed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/MoneroEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_ledger_seed"
            android:imeOptions="normal"
            android:inputType="textMultiLine|textVisiblePassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassphrase"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/MoneroEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_ledger_phrase"
            android:imeOptions="normal"
            android:inputType="textVisiblePassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvOpenPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:visibility="gone" />
</LinearLayout>