<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etWalletName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    style="@style/MoneroEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/generate_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="textStart" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etWalletPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    style="@style/MoneroEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/generate_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textAlignment="textStart" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etWalletMnemonic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/MoneroEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generate_mnemonic_hint"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:textAlignment="textStart" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etWalletAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"

            app:counterEnabled="true"
            app:counterMaxLength="95"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/MoneroEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generate_address_hint"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etWalletViewKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:counterEnabled="true"
            app:counterMaxLength="64"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText"
                style="@style/MoneroEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generate_viewkey_hint"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etWalletSpendKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:counterEnabled="true"
            app:counterMaxLength="64"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/MoneroEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generate_spendkey_hint"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etWalletRestoreHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/MoneroEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generate_restoreheight_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bGenerate"
            style="@style/MoneroButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/generate_buttonGenerate" />

    </LinearLayout>
</ScrollView>