<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvAddress"
        style="@style/MoneroText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_top_first"
        android:transitionName="@string/subaddress_info_transition_name"
        tools:text="#1: 83ALRYDTkLULDpDpDYEtWfc8EQxp7z77FNENX43aiJpzGd5pRY1HPLMBpQdXTvvJozePR7UEhYWT3d2H5w9kBgCZ6AtWFd4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_top_first"
        android:layout_marginBottom="@dimen/header_top_first">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/MoneroEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subbaddress_name_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="textStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTxLabel"
        style="@style/MoneroText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_top"
        android:layout_marginBottom="@dimen/header_top"
        android:text="@string/subaddress_tx_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        android:transitionGroup="true"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/item_transaction" />
</LinearLayout>
